src/styles/pic/lightbox.less
.lightbox {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  width: 100vw;
  height: calc(var(--vh, 1vh) * 100);
  background: rgba(0, 0, 0, 0.75);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 5000;
  &-content {
    width: 100vw;
    box-shadow: 0 0 24px rgba(0, 0, 0, 0.15);
    background: @color-accent;
  }
  &-content-landing {
    width: auto;
    height: calc(var(--vh, 1vh) * 100);
  }
  &-content-overheight {
    width: auto;
    height: calc(var(--vh, 1vh) * 100);
  }
}

.dark {
  .lightbox {
    filter: brightness(0.875);
    background: lighten(@color-background-dark, 2.5%);
  }
}

@media screen and (orientation: portrait) and (max-width: 768px) {
  .lightbox {
    &-content {
      width: calc(var(--vh, 1vh) * 100);
      transform: rotateZ(90deg);
    }
    &-content-landing {
      width: 100vw;
      height: auto;
      transform: none;
    }
    &-content-overheight {
      width: auto;
      height: calc(var(--vh, 1vh) * 100);
      transform: none;
    }
    &-content-mobileoverheight {
      width: auto;
      height: 100vw;
      transform: rotateZ(90deg);
    }
  }
}

